--- a/views/about.erb
+++ b/views/about.erb
@@ -1,12 +1,15 @@
 <br>
 <br>
-
+   <div class="hero-about"> 
+ </div>
+<br>
+<br>
 <div class="row">
     <div class="col s12 m6 l8 offset-l2">
-      <div class="card blue-grey darken-1">
+      <div class="card ">
         <div class="card-content white-text">
-          <span class="card-title">OUR BRAND</span>
-          <p>We are an National, franchise, fast casual bakery-café founded in 1829 specializing in French-inspired goods.
+          <span class="card-title fonttitle">OUR BRAND</span>
+          <p class= "text" >We are an National, franchise, fast casual bakery-café founded in 1829 specializing in French-inspired goods.
            In addition to chef-inspired cakes, and pastries, we offer a unique Parisian experience to thousands of customers daily. 
            Today, there are over 12 locations nationdwide, satisfying cravings and taste buds of all ages and backgrounds.</p>
         </div>
@@ -16,11 +19,11 @@
 
   <div class="row">
   <div class="col s12 m6 l8 offset-l2">
-    <div class="card blue-grey darken-1">
+    <div class="card">
       <div class="card-content white-text">
-        <span class="card-title">LOOK NO FURTHER</span>
+        <span class="card-title fonttitle">LOOK NO FURTHER</span>
         <p class= "center" >Locations </p>
-        <p> We want to be everywhere you are and we are hoping 
+        <p class= "text"> We want to be everywhere you are and we are hoping 
         to get there soon, once we built a time machine but for now you can find us here.</p>
       </div>
     </div>
@@ -57,4 +60,7 @@
 </table>
 </div>
 </div>
+<br>
+<br>
 
+<!-- source: http://parisbaguette.com/terms-of-use.html -->
