--- a/views/careers.erb
+++ b/views/careers.erb
@@ -1,28 +1,35 @@
 
+<br>
+   <div class="hero-career"> 
+ </div>
+<br>
+<br>
 
 
 
 <div class="row">
     <div class="col s12 m6 l8 offset-l2">
-    <h2> FEATURED OPENING </h2>
-  <ul>
-    <li>Training Center Instructor</li>
-    <li>Product Marketing Manager</li>
-    <li>Regional Operations Manager</li>
-    <li>Corporate Real Estate Manager</li>
-    <li>Product Marketing Manager</li>
-    <li>Regional Operations Manager</li>
-    <li>Senior Franchise Sales Manager </li>
-    <li>Beverage Quality Assurance Specialist</li>
-    <li>Supply Chain Management Coordinator</li>
+    <h2 class="fonttitle"> Featured Opening </h2>
+  <ul class="text">
+    <li>Training Center Instructor</li><br>
+    <li>Product Marketing Manager</li><br>
+    <li>Regional Operations Manager</li><br>
+    <li>Corporate Real Estate Manager</li><br>
+    <li>Product Marketing Manager</li><br>
+    <li>Regional Operations Manager</li><br>
+    <li>Senior Franchise Sales Manager </li><br>
+    <li>Beverage Quality Assurance Specialist</li><br>
+    <li>Supply Chain Management Coordinator</li><br>
     <li>Human Resources Recruiter</li>
   </ul>
   
 
 </div>
 </div>
+<br>
+<br>
 
-
+<!-- source: http://parisbaguette.com/terms-of-use.html -->
 
 
  
