--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,2 +1,13 @@
+<br>
+ <div class="hero-thanks">
+ </div>
+<br><br><br>
+<div class="center">
+<div class="card-content">
+<p class="text"> We will send you an email with our catalog for the store.
+<br>Let us be your next stop along your journey!</p>
+</div>
+</div>
+<br>
 
-<h3>We will send you an email!</h3>
+
