--- a/views/form.erb
+++ b/views/form.erb
@@ -8,9 +8,11 @@
   </div>
     
   <br> 
-  <h6 >Customer Service Team hours are Monday - Friday, 9am to 6pm PDT<br>
-  Tel: (345) 675 - 8812 <br>
-    Subcribe to 1829 Bakery via e-mail using the form below:</h6>
+  <div class="center">
+  <p class="text" >Customer Service Team hours are:<br> Monday - Friday<br> 9am to 6pm PDT<br><br>
+  Tel: (345) 675 - 8812 <br><br><br><br><br><br>
+    Subcribe to 1829 Bakery via e-mail using the form below:</p>
+    </div>
   <br> 
   <br> 
   <br> 
@@ -19,13 +21,17 @@
 
 
 
-
-
+  <div class="center">
+  <div class="row">
+  <div class="col s12 m6  offset-m3">
 <form action="/contact" method="post">
   <input type="text" name="visitor_name" placeholder="Your name" class="inputSuff">
   <input type="text" name="email_address" placeholder="email_address@something.com" class="inputSuff">
   <input type="submit" value="Thank You for Subscribing">
 </form>
+</div>
+</div>
+</div>
 
 <br>
 <br>
