--- a/views/term_of_us.erb
+++ b/views/term_of_us.erb
@@ -6,13 +6,13 @@
 
 <br>
 <br>
-  <div class="col s12 m7 l8 horizontal">
+  <div class="col s12 m7 l8 horizontal #ee6e73">
     <div class="card horizontal">
       <div class="card-stacked">
         <div class="card-content">
-        <p> 1829 Bakery USA, INC.
+        <p class="center-align fonttitle "> 1829 Bakery USA, INC.
         WEBSITE TERMS AND CONDITIONS </p> <br>
-        <p> Last Revised:  March 18, 2015 </p>   
+        <p class="center-align fonttitle"> Last Revised:  March 18, 2015 </p>   
         </div>
       </div>
     </div>
@@ -29,7 +29,7 @@
 <br>
 <div class="col s12 m7 l8 horizontal">
       <div class="card-content">
-      <p>1. Products and Pricing      </p>
+      <p class='bold'>1. Products and Pricing     </p>
       <p>Please note that all products, goods, services, features and their pricing and availability may be subject to change at any time without notice at the sole discretion of 1829 Bakery. In addition, the inclusion of any products or services on the website does not imply or warrant that these products, services or features will be available at any time. We make no representations as to the accuracy, correctness or completeness of any information on this website.
       We reserve the right, but are not obligated, to limit sales of our products or services to any person, geographic region or jurisdiction. We also reserve the right to discontinue any product, services or features at any time and may require verification of information prior to the acceptance and/or delivery of any products or services.  We may exercise these rights on a case-by-case-basis.
        Any offer for any product or services made on this website is void where prohibited. </p>
@@ -38,7 +38,7 @@
  
 <div class="col s12 m7 l8 horizontal">
       <div class="card-content">
-      <p>2. Methods of Payment</p>
+      <p class='bold'>2. Methods of Payment</p>
       <p>An order is not binding upon 1829 Bakery until it is accepted.  1829 Bakery must receive payment before it will accept an order, deliver the products or services or allow pick up of the products. While it is our practice to confirm any and all orders by email, the receipt of an order confirmation by email does not constitute our acceptance of an order or our confirmation of an offer to sell any product or service.  If for any reason you do not provide us with the required payment or if you input an incorrect or invalid order online, you will be solely responsible for any costs incurred in fulfilling the order as well as any incidental or consequential damages that may arise.
         Before you can complete the purchase of any goods or services on our website, you must provide us with a valid credit card number and associated payment information.  In addition, by selecting “credit card” as a method of payment, you are authorizing us to use your credit card as a method of payment. If we are unable to procure payment from your credit card issuer, you agree to pay all amounts due upon demand to us. The final charges on your credit card may be different than those stated on the website or in the order confirmation, which may include applicable taxes and delivery fees.
          </p>
@@ -47,7 +47,7 @@
 
 <div class="col s12 m7 l8 horizontal">
 <div class="card-content">
-<p>3. Return Policy</p>
+<p class='bold'> 3. Return Policy</p>
 <p>All products and services ordered on this website are perishable and/or specially made to order and are subject to refund in our sole discretion. Please choose and order the products and services carefully. If you have any problems or issues regarding our catered, take out or delivered products or services, please contact us within 24 hours upon your receipt of the products or completion of the service for an exchange, credit or refund. Any such exchange, credit or refund will be determined on a case-by-case basis and at our sole discretion.
    </p>
 </div>
@@ -55,7 +55,7 @@
 
 <div class="col s12 m7 l8 horizontal">
 <div class="card-content">
-<p>4. Registration, Accounts and Passwords</p>
+<p class='bold'>4. Registration, Accounts and Passwords</p>
 <p>You are responsible for the protection and security of any password or username that you may use to access this website. You are responsible for all direct or indirect damages and liable for all activity conducted on this website that can be linked or traced back to your username or password. You are obligated to immediately report a lost or stolen password or username to us.
    </p>
 </div>
@@ -63,7 +63,7 @@
 
 <div class="col s12 m7 l8 horizontal">
 <div class="card-content">
-<p>5.  Restrictions on Use
+<p class='bold'> 5.  Restrictions on Use 
 </p>
 <p>
 This website and all of its materials and content, including and not limited to the 1829 Bakery trademark, software, source code, HTML code, scripts, apps, text, artwork, photographs, images, animations, video and audio (collectively “Materials”) are protected by U.S. copyright and trademark laws and other international laws and treaties.  All Materials on this website are provided by 1829 Bakery as a limited license to inform its current and prospective customers regarding 1829 Bakery’s products, services and features and to allow customers to place order through this website. No right, title or interest is conveyed through the use and display of the Materials on this website.  As such, you may not copy, reproduce, publish, transmit, distribute, perform, display, post, modify, alter, create derivative works from, sell, license or otherwise exploit this website or any of its Materials without prior written permission from 1829 Bakery.  In addition, you may not access or use this website or its Materials for any competitive or commercial purpose. 1829 Bakery may revoke this limited license at any time for any reason.  All rights not expressly granted herein are reserved by 1829 Bakery.
@@ -75,7 +75,7 @@ In addition to any remedies that we may have at law or in equity, if we determin
 </div> 
  
 
-
+<!-- source: http://parisbaguette.com/terms-of-use.html -->
 
  
 
