--- a/views/about.erb
+++ b/views/about.erb
@@ -1,9 +1,6 @@
-<br>
-<br>
-   <div class="hero-about"> 
- </div>
-<br>
-<br>
+<br><br>
+   <div class="hero-about"> </div>
+<br><br>
 <div class="row">
     <div class="col s12 m6 l8 offset-l2">
       <div class="card ">
@@ -34,32 +31,31 @@
 
 <div class="row">
     <div class="col s12 m6 l8 offset-l2">
-<table>
-<tbody>
-  <tr>
-    <td>Manhattan, NY</td>
-    <td>Brooklyn, NY</td>
-    <td>Bayside, NY</td>
-  </tr>
-  <tr>
-    <td>Flushing,NY</td>
-    <td>Sunnyside, NY</td>
-    <td>Rego Park, NY</td>
-  </tr>
-  <tr>
-    <td>Edison, NJ</td>
-    <td>Doraville,GA</td>
-    <td>Las Vegas, NV</td>
-  </tr>
-  <tr>
-    <td>Aliso Viejo, CA</td>
-    <td>Buena Park, CA</td>
-    <td>Los Angeles, CA</td>
-  </tr>
-</tbody>
-</table>
-</div>
-</div>
+      <table>
+        <tbody>
+          <tr>
+            <td>Manhattan, NY</td>
+            <td>Brooklyn, NY</td>
+            <td>Bayside, NY</td>
+          </tr>
+          <tr>
+            <td>Flushing,NY</td>
+            <td>Sunnyside, NY</td>
+            <td>Rego Park, NY</td>
+          </tr>
+          <tr>
+            <td>Edison, NJ</td>
+            <td>Doraville,GA</td>
+            <td>Las Vegas, NV</td>
+          </tr>
+          <tr>
+            <td>Aliso Viejo, CA</td>
+            <td>Buena Park, CA</td>
+            <td>Los Angeles, CA</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 <br>
 <br>
 
