--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,6 +46,7 @@
 
 
   </div>
+  <div class="footer">
   <footer class="page-footer ">
   <div class="container">
     <div class="row ">
@@ -68,6 +69,7 @@
     © 2018 Bakery USA
     <a class="grey-text text-lighten-4 right">inc. all rights reserved for 1829 Bakery NYC</a>
     </div>
+  </div>
   </div>
 </footer>
 
